--- a/extract_highdive.yaml
+++ b/extract_highdive.yaml
@@ -1,10 +1,10 @@
 band:
-    css: 'div[data-venue-id="2466"] a.sg-events__event-title-link'
+    css: 'div[data-group-id="2463"] a.sg-events__event-title-link'
     xpath: null
     multiple: true
     type: Text
 date:
-    css: 'div[data-venue-id="2466"] time.sg-events__event-date'
+    css: 'div[data-group-id="2463"] time.sg-events__event-date'
     xpath: null
     multiple: true
     type: Text
