--- a/cron.yaml
+++ b/cron.yaml
@@ -1,5 +1,5 @@
 cron:
 - description: "Pull Events Daily"
-  url: /cron
+  url: /cron/daily
   schedule: every day 06:00
   timezone: "America/Los_Angeles"
